gap issue fixed

--- a/src/assets/admin/template/booking.scss
+++ b/src/assets/admin/template/booking.scss
@@ -683,6 +683,7 @@
                 font-size: 1.6;
                 font-weight: 400px;
                 line-height: 24px;
+                width: calc(33% - 6px);
             }
         }
     }
